--- a/css/master.css
+++ b/css/master.css
@@ -423,6 +423,7 @@ header {
 }
 
 .about-content h2 {
+  text-align: center;
   font-size: 32px;
   margin-bottom: 20px;
   color: var(--main-color);
